# photo_Lensfolio

./: LICENSE  README.md  index.html  package-lock.json  package.json  prd.md
src/: App.css  App.tsx  main.tsx  style.css
src-tauri/: Cargo.toml  lensfolio.db  tauri.conf.json
src-tauri/src/: database.rs  image_processor.rs  main.rs  models.rs
src/components/: ImageGrid.css  ImageGrid.tsx  Sidebar.css  Sidebar.tsx
