[package]
name = "lensfolio"
version = "0.1.0"
description = "光影管家 - 本地图片管理工具"
authors = ["your-name <your-email@example.com>"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = [ "fs-rename-file", "fs-read-dir", "fs-exists", "fs-create-dir", "dialog-open", "fs-read-file", "fs-write-file", "path-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
rusqlite = { version = "0.31", features = ["bundled"] }
image = "0.24"

chrono = { version = "0.4", features = ["serde"] }
walkdir = "2.3"
sha2 = "0.10"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"] 
